[gd_scene load_steps=5 format=3 uid="uid://dlr0sb8epdjvr"]

[ext_resource type="Script" path="res://Script/Door_Key.gd" id="1_mo8tn"]
[ext_resource type="PackedScene" uid="uid://cp8co0g5sqssp" path="res://Scene/Dialogue.tscn" id="2_smg07"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tybaa"]
size = Vector2(63.75, 62.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8kbh"]
size = Vector2(72, 71)

[node name="Door_Key" type="StaticBody2D"]
position = Vector2(538, 262)
collision_layer = 8
collision_mask = 6
script = ExtResource("1_mo8tn")

[node name="Dialogue" parent="." instance=ExtResource("2_smg07")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tybaa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.76837e-06, 4.76837e-06)
scale = Vector2(0.503906, 0.503906)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_w8kbh")

[connection signal="start_dialogue" from="." to="Dialogue" method="start_dialogue"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
